feat(api, sdk-py, sdk-ts): add user interface (#139)
* feat(api): implement user listing and resource counting features

* feat(sdk-py): add async user management features including listing and resource retrieval

* feat(sdk-ts): implement user listing and resource retrieval methods in UsersAPI

* fix(tests): update userIdentifier to user in space creation test

* feat(docs): add user listing and resource retrieval endpoints with detailed documentation
